@@ -127,8 +127,8 @@ span.block		{display:block;}
 .data_source a:hover	{color:#FFC28A;}
 .data_source a:active	{color:#fff;}
 .data_source a span		{color:#ccc;}
-.data_source a.dlogs	{width:20%;}
-.data_source a.slug		{width:28%;}
+.data_source a.dlogs	{width:12%;}
+.data_source a.slug		{width:17%;}
 .data_source a.csv		{margin-right:0; width:20%;}
 
 /*	COUNT	*/
