@@ -43,7 +43,7 @@
 	<div class="wrap_iati_identifier">
 		<div class="text">IATI IDENTIFIER <a href="{origin}/savi/?aid={_it./iati-identifier}" target="blank">{_it./iati-identifier}</a></div>
 		<div class="data_source">
-			<a class="xml" href="{origin}/q.xml?aid={_it./iati-identifier}" target="_blank"><span>view</span> xml</a><a class="json" href="{origin}/q.json?aid={_it./iati-identifier}" target="_blank"><span>view</span> json</a><a class="dlogs" href="{origin}/ctrack.html#view=dash_sluglog&slug={_it.@dataset}" target="_blank"><span>view dataset</span> logs</a><a class="slug" href="http://iatiregistry.org/dataset/{_it.@dataset}" target="_blank"><span>view iati registry</span> dataset</a><a class="csv" href="{origin}/q.csv?aid={_it./iati-identifier}" target="_blank"><span>download</span> csv</a>
+			<a class="xml" href="{origin}/q.xml?aid={_it./iati-identifier}" target="_blank"><span>view</span> xml</a><a class="json" href="{origin}/q.json?aid={_it./iati-identifier}" target="_blank"><span>view</span> json</a><a class="dlogs" href="{origin}/ctrack.html#view=dash_sluglog&slug={_it.@dataset}" target="_blank"><span>view</span> logs</a><a class="slug" href="http://iatiregistry.org/dataset/{_it.@dataset}" target="_blank"><span>iati registry</span></a><a class="slug" href="https://iativalidator.iatistandard.org/view/dqf/files/{_it.@dataset-hash}" target="_blank"><span>iati validator</span></a><a class="csv" href="{origin}/q.csv?aid={_it./iati-identifier}" target="_blank"><span>download</span> csv</a>
 		</div>
 	</div>
 {_it./document-link&&_it:/wrap-document-link||}
@@ -1925,7 +1925,7 @@
 	<div class="wrap_iati_identifier org_id">	<!--	ORG IDENTIFIER AND SOURCES	-->
 		<div class="text">Organisation identifier <a href="{origin}/savi/?pid={_it./organisation-identifier}"  target="_blank">{_it./organisation-identifier||}</a></div>
 		<div class="data_source">
-			<a class="xml" href="{origin}/q.xml?pid={_it./organisation-identifier}" target="_blank"><span>view</span> xml</a><a class="json" href="{origin}/q.json?&from=xson&root=/iati-organisations/iati-organisation&pid={_it./organisation-identifier}" target="_blank"><span>view</span> json</a><a class="dlogs" href="{origin}/ctrack.html#view=dash_sluglog&slug={_it.@dataset}" target="_blank"><span>view dataset</span> logs</a><a class="slug" href="http://iatiregistry.org/dataset/{_it.@dataset}" target="_blank"><span>view iati registry</span> dataset</a><a class="csv" href="{origin}/q.csv?&from=xson&root=/iati-organisations/iati-organisation&pid={_it./organisation-identifier}" target="_blank"><span>download</span> csv</a>
+			<a class="xml" href="{origin}/q.xml?pid={_it./organisation-identifier}" target="_blank"><span>view</span> xml</a><a class="json" href="{origin}/q.json?&from=xson&root=/iati-organisations/iati-organisation&pid={_it./organisation-identifier}" target="_blank"><span>view</span> json</a><a class="dlogs" href="{origin}/ctrack.html#view=dash_sluglog&slug={_it.@dataset}" target="_blank"><span>view</span> logs</a><a class="slug" href="http://iatiregistry.org/dataset/{_it.@dataset}" target="_blank"><span>iati registry</span></a><a class="slug" href="https://iativalidator.iatistandard.org/view/dqf/files/{_it.@dataset-hash}" target="_blank"><span>iati validator</span></a><a class="csv" href="{origin}/q.csv?&from=xson&root=/iati-organisations/iati-organisation&pid={_it./organisation-identifier}" target="_blank"><span>download</span> csv</a>
 		</div>
 	</div>
 	{_it./document-link&&_it:/wrap-document-link||}
